# ChangeLog for net-libs/iojs
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/iojs/ChangeLog,v 1.11 2015/03/10 03:20:07 patrick Exp $

*iojs-1.5.1 (10 Mar 2015)

  10 Mar 2015; Patrick Lauer <patrick@gentoo.org> +iojs-1.5.1.ebuild:
  Bump

*iojs-1.4.1 (28 Feb 2015)

  28 Feb 2015; Patrick Lauer <patrick@gentoo.org> +iojs-1.4.1.ebuild:
  Bump

*iojs-1.3.0 (20 Feb 2015)

  20 Feb 2015; Patrick Lauer <patrick@gentoo.org> +iojs-1.3.0.ebuild:
  Bump

  16 Feb 2015; Mike Frysinger <vapier@gentoo.org> iojs-1.2.0.ebuild:
  Clean up src_configure: use proper arrays to hold flags, and use $ARCH rather
  than $CHOST matching to look up the target arch.

  16 Feb 2015; Mike Frysinger <vapier@gentoo.org>
  +files/iojs-1.2.0-pkgconfig.patch, iojs-1.2.0.ebuild:
  Fix by Paul McClave to respect $PKG_CONFIG.

  16 Feb 2015; Mike Frysinger <vapier@gentoo.org> iojs-1.2.0.ebuild:
  Fix by Paul McClave to drop the v8 -D flag for x86 targets as configure does
  not recognize it.

  15 Feb 2015; Patrick Lauer <patrick@gentoo.org> iojs-1.2.0.ebuild:
  Force openssl sanity #540106

*iojs-1.2.0 (15 Feb 2015)

  15 Feb 2015; Patrick Lauer <patrick@gentoo.org> +iojs-1.2.0.ebuild:
  Bump

*iojs-1.1.0 (06 Feb 2015)

  06 Feb 2015; Patrick Lauer <patrick@gentoo.org> +iojs-1.1.0.ebuild:
  Bump

*iojs-1.0.4-r1 (30 Jan 2015)

  30 Jan 2015; Patrick Lauer <patrick@gentoo.org> +iojs-1.0.4-r1.ebuild,
  iojs-1.0.4.ebuild:
  Fixes for test phase etc. by jbergstroem

*iojs-1.0.4 (27 Jan 2015)

  27 Jan 2015; Patrick Lauer <patrick@gentoo.org> +iojs-1.0.4.ebuild,
  +metadata.xml:
  Initial import, ebuild by jbergstroem