@@ -5,6 +5,7 @@ DIST iojs-v1.2.0.tar.xz 12327228 SHA256 d33b448d173a0df675c471d24a33db57208c30b3
 DIST iojs-v1.3.0.tar.xz 12332784 SHA256 0c20c0d26d8c8e8814f02fd20fb5e57098f747692cddfd7453ffae973ebcebda SHA512 aec944e6752b6d6480b2e9cd361bc410ad22adb54260aef971617ede66bdf4ce98c0c4d36b38ddae635496e23faeffd842f74f450fa84a920b7438c76b2d601a WHIRLPOOL f41356fb57915c14589dc9c9ef3524c20e816fdb62e040f53997abe6851eabdbe9b89f04eb8bdc1a525fc9f3bf713d5da0fce9a245d1b9761e579a5fd58ea26a
 DIST iojs-v1.4.1.tar.xz 12352156 SHA256 fdb2aa43f3099855532ebdec50c4bf8c62b971d11f282cfa0d321e6cfe86db95 SHA512 f5a171e9146f14e901aa6f113c4ae4a709c25c7b38fb08f7510160e1279f31751789208abbd7ac63247d2a080aa96154c501ae3fea2c316a8ff1cf9403666070 WHIRLPOOL 7c6830dedd0aaa8cd63dde6d42e38f35836598599ab1b2424847624f2d9bb20a4b251be87a8be4ff152ea7f247a681c2ce548dc5ac61ad9ac7f4be5e9d4cade7
 DIST iojs-v1.5.1.tar.xz 10458032 SHA256 edf7fe994b72f70cc2c8e6d971ad94f576cdb36b2be008471e5b0d3af61a77fc SHA512 97aecf0b5e36c0692f3220f3bdddcc901218ae0dd04ddcb408c5767f985e6b4e601849b835f74b66579010f8b6fdf372f48209682d16f5675ac087762801ef33 WHIRLPOOL 252b68a0874680280de103b85f9af2d841510114e526cbf603349b59e3ff04e7e424c96c9e2bb186e1e4e1f096cfebe35d0f66fbd853f5ca44259d91f4ec8059
+DIST iojs-v1.6.2.tar.xz 10516028 SHA256 0015db12ebc7bdef4c44d88af08c964dea5fbf45a6e1218ed5ce26a275a4d3c6 SHA512 03a9dabdb5cfdf858f34acd0ca6442bf065eb7f098e117771eda3e528e9629bc4c76a260c0bcdcc07f4c02ca851118e926f4c510556477a79c69464f910b75ff WHIRLPOOL dbe2e185890b34270df361311b2765cbfb4fd9a692dc382df574c1b2c893ac6529192ad639aff0b27d1eb87d8419ba30b2208e1eaf2f087a4e2f576eb952bbae
 EBUILD iojs-1.0.4-r1.ebuild 3206 SHA256 884a98f1736ded1fdc73b076307054763eead3cbb69fb6198b7238832cfc6f46 SHA512 99519f8f678ada8dc6c25645866e382a5994cdb4d65792bfad43a3e2018599d02d2762d51b6b2961622b3eaf5da1c005bc78d762e506c92ed4045da8c6800a7d WHIRLPOOL 65edebb0c07bc39bdf00eb368f37a08e2c3e9e46bce29c4cb43942fc1e9cacc6e1e5ff39e89f3749a43b58c31636dbd9e1b7fccd703bdda7a852f078194ef3dc
 EBUILD iojs-1.0.4.ebuild 2944 SHA256 4a78febd3440bc5fa021312c3994e462e5da8ed0e916003369bd0398bdd46e56 SHA512 15888b7647b29f50e9488a6497672aa2a686c1646b1403914cacfc51ce5b87a73417bbc0e384e4551fcdd2f631a33e4ffd5b089a692f4ac674c11ecde51824f7 WHIRLPOOL 22becab91f294b04ff7207fdd594e5639d51d9168d8bc6344f3332f88dede4e0dbfac03e0e46ef3bfe211f7f5caa08211d306563fbec1a236801747b6317fec0
 EBUILD iojs-1.1.0.ebuild 3203 SHA256 d861b5e857e2ec150b7469e2928f13642944323027dd249406e7782fa7e8739e SHA512 fc9630b1e2b9db03f5a9e9aa7239321cd197b661bbcb9564b04755d25ef12bd92160abec20067a46a3ebd0160650713e00707c4e8ce87219a6fd799824c6133b WHIRLPOOL 84b40270e7f440c9caef7cff80ef2c30c18ce9830f66eb4c0316cba14c84e1e6fb9ab8cc9b59ae7f978c5433836470e7efae8d7d69467e7b4527c4a6b426fdd0
@@ -12,5 +13,6 @@ EBUILD iojs-1.2.0.ebuild 3195 SHA256 f7e13540a836867b4d91487b16578b86494eb4b3776
 EBUILD iojs-1.3.0.ebuild 3196 SHA256 992dfefa9ff65b9b86a261eed75076e238d41032415676c7dc07b3e445095f7b SHA512 4a7d90e242900b3c5f66d3b5d1fc4a3b2375d3faad15465d87c359865f341ddba668bd208b3ac42392d4d7f83720764f4aea52f4090b4af6fb5bc1083b6fabdf WHIRLPOOL e6ebf531e340acefcd18ac2fda87b9f5c270366aa5217e75882aebfabb4cad42588fbf95ac050f27864de917cbe379f17cec06853e685f5c61e8a7a5efd54046
 EBUILD iojs-1.4.1.ebuild 3196 SHA256 4edbc85d2e893e861eccd72cdb8575a1c45961b4f2735eaff9cb2b236f8c05f6 SHA512 0424719885e619245b56b8e3f35e035df19a7fb29279ccea6779aafca1418f370292c8fbc204ee8750101b800c9ccea29f2fb2491c1a5fd6080d1c6b3e106301 WHIRLPOOL f23a3f5074f495b5ea45b4c90bcf3a745655f0e42acba2a2e360a40f2d0bcbbca572432733520d91e5aee250e123a08327d01a7dc21ba72f502ab52a49aa0a6e
 EBUILD iojs-1.5.1.ebuild 3230 SHA256 589222f34461e454c76013385280878ac4bf2998c7df7553ef68f7f85aeb2508 SHA512 4da8364afaa14724474c0fc6a7354bc6d4bac4347ba2ebc2f95ed13d3ccc63b56c133e44ea7f044781ae57b2f4451a6c6e27807fc3dd7c01259413c5c16851d9 WHIRLPOOL de3290b1a4a69e3ed3435c947804716a250f979032dc3ac33104d1531bcc7ea291e1c2f4a5f7ef236d7fd95c57164eb09540c73c9083e67a1e2f4c88131da506
-MISC ChangeLog 1672 SHA256 d80559fc5d1cc224351fd646caf7080b5242efc4c82c25d11b4bd4c7eb3dcfea SHA512 1e575b6f738ea48f5d161e9b0439a0d397c06437c833b7fb9b496ebdf8cc1621a87e622e7c7e36f83e52ed5b0e5a68c225a535dd420b9a80aebfa0e5f23a05e0 WHIRLPOOL 0ac77e273f091c5aceb409890f4c5aeabc1fc41da117dcdf0bc29de8c27c3adf2b809fe206d40badac77e4813dda0722d5618c437019b8dbb388a505489e003d
+EBUILD iojs-1.6.2.ebuild 3194 SHA256 16d3351798df810d7a65a3e040e01fc030447406a09443a2c4ae1720d4dd47b9 SHA512 6692d158e946bea196a5792d9ea493d6c6f8e2e3dbd0e320b48bc6b45409270babca96a901cdce2145da883f9304db73b233fb9a4f33b28242d9dee56178f39e WHIRLPOOL 5f12144db7748a6f23bc297f8f264844ac2446a40c67dc3d3a69f9c0e284902f92f219d1e6326bb7f4a9603f0c1f5a2bbdd3443ffa2a8b3fec6143dd7e5e72d8
+MISC ChangeLog 1777 SHA256 b2da10346f2fcd58fb771d06c8f952d82b5a50d7ed89889c4c9909eeb49a5787 SHA512 2433d89a0a89da209e3d323bbd82a34d1005a63aaa45a3222dfc86010c0cb761945941de80dab5f8ade46137a0957cbbeb3d15bb3792c4bdece364197350aad6 WHIRLPOOL 8eb75c1255ac2d5bbceaf6b6aa7d6819f9139dec1b9e479083e5901147cf304ddaf4e457e334461506fc23857d507747d23a30b6f1a85b12d0f1b7bfa6f96cbf
 MISC metadata.xml 545 SHA256 ea98b41b3fe8288a7b38649098871f33c897916aaa34c718f8b849bc35d15c12 SHA512 f32b1eced5dada7827c10bb7b59986400d8dce58dc8c2c0b03d3acd0886b539d2c0afa7956c8a0d1b1ae1894eae31c520368c524bd4c7fb5930180fc8bc4b035 WHIRLPOOL f3fe5d3c70386787eae1cc856f7a57d775738096777074b50678f45ed7e5c9c2575c21a452e75d9a5d06245c85c17434593a7b3d0b5f0c4ec932fd3c7a8b84aa
